# frag-pathtracer

./: CMakeLists.txt  LICENSE  README.md
doc/: doc.tex  references.bib
include/: parser.hpp  parser.inl  renderer.hpp
scenes/: blur.ppm  brick.ppm  scene1.in  scene2.in  scene3.in  scene4.in  scene5.in  scene6.in  scene7.in
shaders/: blit.glsl  csg.glsl  knot.glsl  lattice.glsl  template.glsl  vertex.glsl
src/: main.cpp  parser.cpp  renderer.cpp
